# spbu-mm-parallel-programming

./: .gitignore  Common.fs  Monitor.fs  Program.fs
ConsumersProducers/: .gitignore  build.gradle.kts  settings.gradle.kts
KostyukovYurii/ProducerConsumerTask/: ProducerConsumerTask.sln
KostyukovYurii/ProducerConsumerTask/Backend/: Backend.fsproj  Options.fs  Prelude.fs  Threads.fs
KostyukovYurii/ThreadPoolTask/: ThreadPoolTask.sln
ProducerConsumer/: ProducerConsumer.sln
ProducerConsumer/ProducerConsumer/: Consumer.cs  Plant.cs  Producer.cs  ProducerConsumer.csproj  Program.cs
ProducerConsumer/ProducerConsumer.Tests/: PlantTest.cs  ProducerConsumer.Tests.csproj
ProducerConsumer/UnitTestProducerConsumer/: ProducerConsumer.Tests.csproj  UnitTest1.cs
Task1/: Consumer.fs  ConsumerProducer.fsproj  ConsumerProducer.sln  LICENSE  Producer.fs  Task1.sln
Task1/Task1/: Consumer.cs  Producer.cs  ProducerConsumerPattern.cs  Program.cs  Task1.csproj  Worker.cs
Task1/UnitTests/: UnitTest1.cs  UnitTests.csproj
Task2/: Task2.sln  ThreadPool.sln
Task2/Task2/: CustomTask.cs  Program.cs  Queue.cs  Task.cs  Task2.csproj  ThreadPool.cs
Task2/Test/: MyTask.fs  Test.fsproj  UnitTest1.fs
Task2/ThreadPool/: Common.fs  IMyTask.fs  MyThread.fs  Prelude.fs  TaskScheduler.fs  ThreadPool.fs  ThreadPool.fsproj
Task2/UnitTests/: UnitTest1.cs  UnitTests.csproj
Test/: Test.fsproj  UnitTest1.fs
ThreadPool/: .gitignore  build.gradle.kts
consumer-producer/: CMakeLists.txt  README.md
consumer-producer/include/: Buffer.h  Consumer.h  Producer.h  Utils.h
consumer-producer/src/: main.cpp  test.cpp
task_1/: CMakeLists.txt  config_runner.h  consumer.h  main.cpp  producer.h  queue_on_list.h  tests.cpp
thread-pool/: README.md
thread-pool/src/: callable.go  go.mod  task.go  threadpool.go  threadpool_test.go  worker.go
(+32 files in other folders)
